@@ -75,6 +75,7 @@ $_lang['packman.plugins.intro_msg'] = '<p>Please select any Plugins you would li
 $_lang['packman.profile_create'] = 'Create Profile';
 $_lang['packman.profile_description_desc'] = 'A short description of the Profile.';
 $_lang['packman.profile_name_desc'] = 'The name of the Profile.';
+$_lang['packman.profile_options'] = 'Profile Options';
 $_lang['packman.profile_remove'] = 'Remove Profile';
 $_lang['packman.profile_remove_confirm'] = 'Are you sure you want to permanently remove this Profile?';
 $_lang['packman.profile_save'] = 'Save Profile';
@@ -113,6 +114,7 @@ $_lang['packman.template_remove'] = 'Remove Template';
 $_lang['packman.template_remove_confirm'] = 'Are you sure you want to remove this Template?';
 $_lang['packman.templates'] = 'Templates';
 $_lang['packman.templates.intro_msg'] = '<p>Please select the Templates you want to package. The script will automatically package in any assigned Template Variables as well.</p><p>You may also specify a directory to package in with each Template. The script will automatically copy this directory to the assets/templates/ directory during the Package install. If the directory is not found on your system, it will be skipped.</p>';
+$_lang['packman.unload_profile'] = 'Unload Profile';
 $_lang['packman.version'] = 'Version';
 $_lang['packman.version_desc'] = 'The version of the Transport Package that will be created. Examples: 1.0.0, 2.1, 3.2.5';
 $_lang['packman.version_err_nf'] = 'Please specify a version.';
